--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,17 @@
     
     <!-- Optional: Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11564248396">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-11564248396');
+    </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
